corrected h1 center align

--- a/src/components/article/article.scss
+++ b/src/components/article/article.scss
@@ -67,6 +67,9 @@
         }
 
         .header{
+            h1{
+                text-align: center;
+            }
             background: $background;
         }
 
