--- a/src/global.scss
+++ b/src/global.scss
@@ -36,7 +36,6 @@ $mobileContentXLargeSize: 60px;
 
 h1{
     font-size: 35px;
-    text-align: center;
 
     &.mobile{
         margin-top: 20px;
